# lstr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: demo.tape
src/: app.rs  main.rs  sort.rs  tui.rs  utils.rs  view.rs
tests/: cli.rs
