[package]
name = "lstr"
version = "0.1.2" 
authors = ["Brandon Greenwell <greenwell.brandon@gmail.com>"]
edition = "2021"
description = "A blazingly fast, minimalist directory tree viewer, written in Rust."
license = "MIT" 
readme = "README.md"
homepage = "https://github.com/bgreenwell/lstr" 
repository = "https://github.com/bgreenwell/lstr" 
keywords = ["ls", "tree", "filesystem", "command-line"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
colored = "2.1.0"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
git2 = "0.19.0"
ignore = "0.4.22"
ratatui = "0.27.0"
rayon = "1.10.0"

# Dependencies for testing the command-line interface
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"